fpc: non-functional: break some longer lines in portfile
[skip ci]

--- a/lang/fpc/Portfile
+++ b/lang/fpc/Portfile
@@ -10,12 +10,15 @@ license             {GPL-2 LGPL-2}
 maintainers         {@kamischi web.de:karl-michael.schindler} \
                     {@barracuda156 gmail.com:vital.had} \
                     openmaintainer
-description         Free Pascal, an open source Pascal and Object Pascal compiler.
-long_description    Free Pascal is a 32, 64 and 16 bit professional Pascal compiler. \
-                    It can target many processor architectures: Intel x86 (including 8086), \
-                    AMD64/x86-64, PowerPC, PowerPC64, SPARC, ARM, AArch64, MIPS and the JVM. \
-                    Supported operating systems include Linux, FreeBSD, Mac OS X/iOS/iPhoneSimulator/Darwin, \
-                    Win32, Win64, WinCE and Android.
+description         Free Pascal, an open source Pascal and Object Pascal \
+                    compiler.
+long_description    Free Pascal is a 32, 64 and 16 bit professional Pascal \
+                    compiler. It can target many processor architectures: \
+                    Intel x86 (including 8086), AMD64/x86-64, PowerPC, \
+                    PowerPC64, SPARC, ARM, AArch64, MIPS and the JVM. \
+                    Supported operating systems include Linux, FreeBSD, \
+                    Mac OS X/iOS/iPhoneSimulator/Darwin, Win32, Win64, WinCE \
+                    and Android.
 homepage            https://www.freepascal.org
 
 # TODO: add support for i386
@@ -64,7 +67,8 @@ universal_variant   no
 
 set fpcbasepath     ${prefix}/libexec/${name}
 
-if {${os.platform} eq "darwin" && ${os.major} >= 22} { # 13, Ventura, fix obsolete linker options
+if {${os.platform} eq "darwin" && ${os.major} >= 22} {
+ # macOS 13, Ventura, fix obsolete linker options
     patchfiles-append   t_darwin.pas.patch
 }
 
@@ -73,8 +77,8 @@ subport "chmcmd-${name}" {
 
     description     The FPC Pascal htmlhelp (CHM) compiler
     long_description \
-                    chmcmd is an cross-platform utility to generate compressed HTML (.chm) \
-                    documentation, written in Free Pascal
+                    chmcmd is a cross-platform utility to generate compressed \
+                    HTML (.chm) documentation, written in Free Pascal.
 
     depends_build-append \
                     port:${name}
@@ -123,7 +127,8 @@ subport "${name}-cross" {
     use_configure   no
     patch.pre_args  -p1
     build.args      OPT="-ap -v0"
-    build.target    aarch64 arm avr i386 i8086 jvm m68k mips mipsel powerpc powerpc64 sparc x86_64
+    build.target    aarch64 arm avr i386 i8086 jvm m68k mips mipsel \
+                    powerpc powerpc64 sparc x86_64
     switch ${build_arch} {
         x86_64 {
             build.target-delete x86_64
@@ -143,8 +148,10 @@ subport "${name}-cross" {
 
       # loop over installing all cross-compilers
         foreach PPCCROSS [glob -tails -directory ${worksrcpath} ppc*] {
-            xinstall -m 0755 ${worksrcpath}/$PPCCROSS ${destroot}${prefix}/lib/fpc/${version}
-            ln -sf ../lib/fpc/${version}/$PPCCROSS ${destroot}${prefix}/bin/$PPCCROSS
+            xinstall -m 0755 ${worksrcpath}/$PPCCROSS \
+                    ${destroot}${prefix}/lib/fpc/${version}
+            ln -sf ../lib/fpc/${version}/$PPCCROSS \
+                    ${destroot}${prefix}/bin/$PPCCROSS
         }
     }
 }
@@ -172,7 +179,8 @@ subport "${name}-cross-arm-wince" {
         fpc -Parm -Twince FILENAME
 
     build.args      PP=ppcarm CPU_TARGET=arm OS_TARGET=wince OPT="-ap -v0"
-    destroot.args   CPU_TARGET=arm OS_TARGET=wince CROSSINSTALL=1 INSTALL_PREFIX=${destroot}${prefix}
+    destroot.args   CPU_TARGET=arm OS_TARGET=wince CROSSINSTALL=1 \
+                    INSTALL_PREFIX=${destroot}${prefix}
 
 # remove duplicate doc and bin files
     post-destroot   {
@@ -204,8 +212,10 @@ foreach ostarget {nativent win32 wince} {
             \n \
             fpc -Pi386 -T$ostarget FILENAME
 
-        build.args      PP=ppc386 CPU_TARGET=i386 OS_TARGET=$ostarget OPT="-ap -v0"
-        destroot.args   CPU_TARGET=i386 OS_TARGET=$ostarget CROSSINSTALL=1 INSTALL_PREFIX=${destroot}${prefix}
+        build.args      PP=ppc386 CPU_TARGET=i386 OS_TARGET=$ostarget \
+                        OPT="-ap -v0"
+        destroot.args   CPU_TARGET=i386 OS_TARGET=$ostarget CROSSINSTALL=1 \
+                        INSTALL_PREFIX=${destroot}${prefix}
 
 # remove duplicate doc and bin files
         post-destroot   {
@@ -238,7 +248,8 @@ subport "${name}-cross-x86-64-win64" {
         fpc -Px86_64 -Twin64 FILENAME
 
     build.args      PP=ppcx64 CPU_TARGET=x86_64 OS_TARGET=win64 OPT="-ap -v0"
-    destroot.args   CPU_TARGET=x86_64 OS_TARGET=win64 CROSSINSTALL=1 INSTALL_PREFIX=${destroot}${prefix}
+    destroot.args   CPU_TARGET=x86_64 OS_TARGET=win64 CROSSINSTALL=1 \
+                    INSTALL_PREFIX=${destroot}${prefix}
 
 # remove duplicate doc and bin files
     post-destroot   {
@@ -252,23 +263,28 @@ if {${subport} eq "${name}"} {
 
     installs_libs       yes
 
-    if {${os.platform} eq "darwin" && ${configure.build_arch} in [list ppc ppc64]} {
+    if {${os.platform} eq "darwin" \
+        && ${configure.build_arch} in [list ppc ppc64]} {
         post-extract {
             xinstall -d ${workpath}/tmp/boot
-            system "hdiutil attach ${distpath}/${pp} -private -nobrowse -mountpoint ${workpath}/tmp/boot"
-            copy ${workpath}/tmp/boot/${name}-${boot_v}.powerpc-macosx.pkg ${workpath}/pkg
+            system "hdiutil attach ${distpath}/${pp} -private -nobrowse \
+                    -mountpoint ${workpath}/tmp/boot"
+            copy ${workpath}/tmp/boot/${name}-${boot_v}.powerpc-macosx.pkg \
+                    ${workpath}/pkg
             system "hdiutil detach ${workpath}/tmp/boot -force"
             delete -force ${workpath}/tmp/boot
             system -W ${workpath} "gunzip -d pkg/Contents/Archive.pax.gz"
             system -W ${workpath}/pkg "pax -r < Contents/Archive.pax"
-            copy ${workpath}/pkg/usr/local/lib/${name}/${boot_v}/${bootstrapCompiler} ${workpath}
+            copy ${workpath}/pkg/usr/local/lib/${name}/${boot_v}/${bootstrapCompiler} \
+                    ${workpath}
         }
     } else {
         extract.only-append ${pp}
     }
 
     post-patch {
-        # adjust the path "codfilepath" for plex from /usr/local to MacPort's prefix.
+        # adjust the path "codfilepath" for plex
+        # from /usr/local to MacPort's prefix.
         reinplace "s|/usr/local|${prefix}|g" \
             ${worksrcpath}/utils/tply/pyacc.y \
             ${worksrcpath}/utils/tply/pyacc.pas \
@@ -323,7 +339,7 @@ if {${subport} eq "${name}"} {
                 macosx_deployment_target 10.4
                 set tiger_sdkpath ${developer_dir}/SDKs/MacOSX10.4u.sdk
                 if {![file exists $tiger_sdkpath]} {
-                    pre-fetch {ui_error "Building ${name} @${version} requires 10.4 SDK"}
+                    pre-fetch {ui_error "Building ${name} requires 10.4 SDK"}
                 }
                 # We use symlinks to needed tools, but make sure those
                 # have not been created already:
@@ -335,7 +351,8 @@ if {${subport} eq "${name}"} {
                         ln -s /usr/bin/ld_classic ${workpath}/bin/ld
                     }
                 }
-                set otherOptions "-WM${macosx_deployment_target} -XR${tiger_sdkpath} -Fl=/usr/lib -FD${binutils_path}"
+                set otherOptions "-WM${macosx_deployment_target} \
+                        -XR${tiger_sdkpath} -Fl=/usr/lib -FD${binutils_path}"
             }
         } else   {
             set otherOptions ""
@@ -345,7 +362,8 @@ if {${subport} eq "${name}"} {
     worksrcdir          ${name}build-${version}/fpcsrc
     build.env           PP=${workpath}/${bootstrapCompiler} \
                         PREFIX=${destroot}${fpcbasepath}
-    build.args          OPT="-v0 -ap ${otherOptions}" CPU_TARGET=${cpuTarget} UTILS=1
+    build.args          OPT="-v0 -ap ${otherOptions}" CPU_TARGET=${cpuTarget} \
+                        UTILS=1
 
     destroot.args       {*}${build.args}
     destroot.env        {*}${build.env}
@@ -367,32 +385,39 @@ if {${subport} eq "${name}"} {
 
     post-destroot {
         # create a symlink to the architecture dependent executable
-        ln -s ${fpcbasepath}/lib/${name}/${version}/${compiler} ${destroot}${fpcbasepath}/bin
+        ln -s ${fpcbasepath}/lib/${name}/${version}/${compiler} \
+                ${destroot}${fpcbasepath}/bin
         # target arm64 needs make utils_install explicitly
         if {${build_arch} == "arm64"} {
             system -W ${worksrcpath} \
-                   "make utils_install FPC=${worksrcpath}/compiler/${compiler} \
-                       PREFIX=${destroot}${fpcbasepath} \
-                       OPT=\"-Furtl/units/${cpuTarget}-darwin -ap -v0 ${otherOptions}\""
+                "make utils_install FPC=${worksrcpath}/compiler/${compiler} \
+                    PREFIX=${destroot}${fpcbasepath} \
+                    OPT=\"-Furtl/units/${cpuTarget}-darwin -ap -v0 \
+                    ${otherOptions}\""
         }
         # generate a configuration file
         xinstall -d ${destroot}${fpcbasepath}/etc
         system -W ${destroot}${fpcbasepath} \
-               "bin/fpcmkcfg -d basepath=${fpcbasepath}/lib/${name}/${version} -o etc/fpc.cfg"
+            "bin/fpcmkcfg -d basepath=${fpcbasepath}/lib/${name}/${version} \
+                    -o etc/fpc.cfg"
         ln -s ${fpcbasepath}/etc/fpc.cfg ${destroot}${prefix}/etc
-        system "patch ${destroot}${fpcbasepath}/etc/fpc.cfg ${filespath}/fpc.cfg.patch"
+        system "patch ${destroot}${fpcbasepath}/etc/fpc.cfg \
+                    ${filespath}/fpc.cfg.patch"
 
         # remove the -WM option for older systems or update it as needed
         if {${os.platform} eq "darwin"} {
             if {${configure.build_arch} in [list ppc ppc64]} { # macOS PowerPC
-                reinplace "s|-WM10.9|-WM10.4|g" ${destroot}${fpcbasepath}/etc/fpc.cfg
+                reinplace "s|-WM10.9|-WM10.4|g" \
+                    ${destroot}${fpcbasepath}/etc/fpc.cfg
             } elseif {${os.major} < 11}   { # 10.7, Lion
                 reinplace "s|-WM10.9||g" ${destroot}${fpcbasepath}/etc/fpc.cfg
             } elseif {${os.major} >=  20} { # 11, Big Sur
-                reinplace "s|-WM10.9|-WM11.0|g" ${destroot}${fpcbasepath}/etc/fpc.cfg
+                reinplace "s|-WM10.9|-WM11.0|g" \
+                    ${destroot}${fpcbasepath}/etc/fpc.cfg
             }
             if {${os.major} < 13} {
-                reinplace "s|/Applications/Xcode.app/Contents/Developer||g" ${destroot}${fpcbasepath}/etc/fpc.cfg
+                reinplace "s|/Applications/Xcode.app/Contents/Developer||g" \
+                        ${destroot}${fpcbasepath}/etc/fpc.cfg
             }
         }
 
@@ -402,13 +427,16 @@ if {${subport} eq "${name}"} {
         # install man
         xinstall -d ${destroot}${fpcbasepath}/man
         foreach d {1 5} {
-            file copy ${workpath}/${name}build-${version}/install/man/man${d} ${destroot}${fpcbasepath}/man
+            file copy ${workpath}/${name}build-${version}/install/man/man${d} \
+                ${destroot}${fpcbasepath}/man
             foreach f [glob ${destroot}${fpcbasepath}/man/man${d}/*.${d}] {
                 system "/usr/bin/gzip ${f}"
             }
         }
-        ln -s ${fpcbasepath}/man/man1/fpc.1.gz ${destroot}${prefix}/share/man/man1
-        ln -s ${fpcbasepath}/man/man5/fpc.cfg.5.gz ${destroot}${prefix}/share/man/man5
+        ln -s ${fpcbasepath}/man/man1/fpc.1.gz \
+            ${destroot}${prefix}/share/man/man1
+        ln -s ${fpcbasepath}/man/man5/fpc.cfg.5.gz \
+            ${destroot}${prefix}/share/man/man5
 
         # chmcmd will be installed by the chmcmd-fpc subport
         file delete -force ${destroot}${fpcbasepath}/bin/chmcmd
@@ -418,7 +446,8 @@ if {${subport} eq "${name}"} {
         }
 
         # install the compiler utilities msgdif and msg2inc
-        xinstall -m 0755 -W ${worksrcpath}/compiler/utils msgdif msg2inc ${destroot}${prefix}/bin
+        xinstall -m 0755 -W ${worksrcpath}/compiler/utils msgdif msg2inc \
+                ${destroot}${prefix}/bin
     }
 
     notes "
@@ -430,9 +459,10 @@ if {${subport} eq "${name}"} {
         - If it is not yet found: in /etc.
 
         All the files of fpc are installed in ${fpcbasepath} and\
-        the executables are installed in ${fpcbasepath}/bin.
-        The fpc.cfg is installed in ${fpcbasepath}/etc to make fpc find fpc.cfg.
-        To customize, use ~/.fpc.cfg or /etc/fpc.cfg and call ${fpcbasepath}/bin/fpc directly.
+        the executables are installed in ${fpcbasepath}/bin. The fpc.cfg\
+        is installed in ${fpcbasepath}/etc to make fpc find fpc.cfg.\
+        To customize, use ~/.fpc.cfg or /etc/fpc.cfg and call\
+        ${fpcbasepath}/bin/fpc directly.
     "
 
     livecheck.distname  ${name}
