go-devel: update to 1.22.0

--- a/lang/go/Portfile
+++ b/lang/go/Portfile
@@ -30,7 +30,7 @@ set legacy_build    false
 
 # Subport for Go Unstable Version
 subport ${name}-devel {
-    version         1.22rc2
+    version         1.22.0
     revision        0
     epoch           1
 
@@ -66,17 +66,17 @@ livecheck.url       ${homepage}/dl/
 if {$subport eq "${name}-devel"} {
     # Go (DEVEL / UNSTABLE)
     checksums       ${go_src_dist} \
-                    rmd160  46760b188876a0e6c3215f575455dd36e00b8fd4 \
-                    sha256  d193a87db8223821e1ee891edfee36c8eac9ba0cf83e42ede64795a7de8a7f27 \
-                    size    27618539 \
+                    rmd160  5638faead26d22ac8ea8b9c1bcaf6f19d625f56e \
+                    sha256  4d196c3d41a0d6c1dfc64d04e3cc1f608b0c436bd87b7060ce3e23234e1f4d5c \
+                    size    27544122 \
                     ${go_armbin_dist} \
-                    rmd160  ec99e8acd3580bee59bbafd35552d92ff041e4cf \
-                    sha256  96a2a5a9962ac54f9cc274b461cc5a85df3c7be67b5d1dd7b3c234ec1c85b3be \
-                    size    67374044 \
+                    rmd160  c31a837632321fc5d01378f39e9052981a75eb8e \
+                    sha256  bf8e388b09134164717cd52d3285a4ab3b68691b80515212da0e9f56f518fb1e \
+                    size    67300779 \
                     ${go_amdbin_dist} \
-                    rmd160  53704c38bffd43e64ee391b8037f64382575d82f \
-                    sha256  bea4e0a673ba7e93bac12420a48f041d0b05eeb2e24abdaddf59924df2755d48 \
-                    size    70420467
+                    rmd160  bf795126ff3fefc8d99b61ea7f6fcf32616c21ee \
+                    sha256  ebca81df938d2d1047cc992be6c6c759543cf309d401b86af38a6aed3d4090f4 \
+                    size    70336967
 
     livecheck.regex {go([0-9.A-z]+)\.src\.tar\.gz}
 } else {
