--- a/lang/go/Portfile
+++ b/lang/go/Portfile
@@ -15,13 +15,13 @@ epoch               3
 # tested the candidate version using the `go-devel` port, to verify how it
 # builds against current and older versions of macOS.
 
-# Go 1.21 does not build on macOS 10.12 and older
+# Go 1.22 does not build on macOS 10.12 and older
 if {${os.platform} eq "darwin" && ${os.major} < 17} {
     version         1.17.13
     set unsupported_macos true
     revision        0
 } else {
-    version         1.21.7
+    version         1.22.0
     set unsupported_macos false
     revision        0
 }
@@ -98,22 +98,22 @@ if {$subport eq "${name}-devel"} {
                     size    137060546
 
         notes-append "
-            Please note: Go 1.21 does not build on macOS 10.12 and older, so Go ${version} has been installed.
+            Please note: Go 1.22 does not build on macOS 10.12 and older, so Go ${version} has been installed.
         "
     } else {
-        # 1.21
+        # 1.22
         checksums   ${go_src_dist} \
-                    rmd160  fcc69e7d43c9bd3a455a7d4f64da6bbe56f0d3ba \
-                    sha256  00197ab20f33813832bff62fd93cca1c42a08cc689a32a6672ca49591959bff6 \
-                    size    26991014 \
+                    rmd160  5638faead26d22ac8ea8b9c1bcaf6f19d625f56e \
+                    sha256  4d196c3d41a0d6c1dfc64d04e3cc1f608b0c436bd87b7060ce3e23234e1f4d5c \
+                    size    27544122 \
                     ${go_armbin_dist} \
-                    rmd160  8c9979847c999246f4ac2846b6544ce91f175458 \
-                    sha256  26e23304810f8e14ba443664326f53d7eafd83faa8097a5c2c4d55b61f431280 \
-                    size    65113034 \
+                    rmd160  c31a837632321fc5d01378f39e9052981a75eb8e \
+                    sha256  bf8e388b09134164717cd52d3285a4ab3b68691b80515212da0e9f56f518fb1e \
+                    size    67300779 \
                     ${go_amdbin_dist} \
-                    rmd160  7cd2dd36db56b3ed604c8aa0692ebac5b1339850 \
-                    sha256  4b9f4e02e465ba0f3a4c138ecb1c148135cf77c0efb5474461746b7c123b3484 \
-                    size    67322109
+                    rmd160  bf795126ff3fefc8d99b61ea7f6fcf32616c21ee \
+                    sha256  ebca81df938d2d1047cc992be6c6c759543cf309d401b86af38a6aed3d4090f4 \
+                    size    70336967
     }
 
     livecheck.regex {go([0-9.]+)\.src\.tar\.gz}
@@ -287,7 +287,7 @@ destroot {
     xinstall -d ${grfdir}
     xinstall -d ${docdir}
 
-    foreach f {api bin lib misc pkg src test} {
+    foreach f {api bin lib misc pkg src test VERSION} {
         copy ${worksrcpath}/${f} ${grfdir}
     }
 
