--- a/octave/octave-ltfat/Portfile
+++ b/octave/octave-ltfat/Portfile
@@ -2,27 +2,19 @@
 
 PortSystem          1.0
 PortGroup           compilers 1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-version             2.6.0
+octave.setup        github ltfat ltfat 2.6.0 v
 revision            1
-github.setup        ltfat ltfat ${version} v
-octave.setup        ltfat ${version}
-
-platforms           darwin
 license             GPL-3+ BSD
 maintainers         {mps @Schamschula} openmaintainer
 description         The Large Time-Frequency Analysis Toolbox
-
 long_description    {*}${description} (LTFAT) is a Matlab/Octave toolbox for working with \
                     time-frequency analysis, wavelets and signal processing. It is \
                     intended both as an educational and a computational tool. The toolbox \
                     provides a large number of linear transforms including Gabor and \
                     wavelet transforms along with routines for constructing windows \
                     (filter prototypes) and routines for manipulating coefficients.
-
-homepage            https://github.com/ltfat/ltfat/
 
 github.tarball_from releases
 distname            ltfat-${version}-of
