--- a/octave/octave-pool/Portfile
+++ b/octave/octave-pool/Portfile
@@ -1,19 +1,15 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-set pkg_name        pool
-version             1.2.2
+octave.setup        github reprostat octave-pool 1.2.2
+octave.module       pool
 revision            0
-github.setup        reprostat octave-${pkg_name} ${version}
-octave.setup        ${pkg_name} ${version}
 license             MIT
 maintainers         {mps @Schamschula} openmaintainer
 description         Parallel computing with independent job submission for Octave.
 long_description    {*}${description}
-homepage            https://github.com/reprostat/octave-pool
 
 supported_archs     noarch
 platforms           {darwin any}
