octave-pythonic: call correct python interpreter

--- a/octave/octave-pythonic/Portfile
+++ b/octave/octave-pythonic/Portfile
@@ -31,6 +31,12 @@ foreach pv {312 311 310 39 38} {
     if {[variant_isset python${pv}]} {
         depends_lib-append \
                     port:python${pv}
+        set python.branch \
+                    [string index ${pv} 0].[string range ${pv} 1 end]
         break
     }
+}
+
+post-patch {
+    reinplace "s,= 3,= ${python.branch}," ${worksrcpath}/src/Makefile
 }
