--- a/python/py-numexpr/Portfile
+++ b/python/py-numexpr/Portfile
@@ -4,12 +4,12 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-numexpr
-version             2.8.8
+version             2.9.0
 revision            0
 categories-append   math
 license             MIT
 
-python.versions     27 37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -24,28 +24,23 @@ long_description    The numexpr package evaluates multiple-operator array \
 
 homepage            https://github.com/pydata/numexpr
 
-checksums           rmd160  cd1e047b3eebda4316db54e78e35a67bdfa1248d \
-                    sha256  e76ce4d25372f46170cf7eb1ff14ed5d9c69a0b162a405063cbe481bafe3af34 \
-                    size    102950
+checksums           rmd160  7a15e4b205bc8d92585773b5299aceea144cef10 \
+                    sha256  f21d12f6c432ce349089eb95342babf6629aebb3fddf187a4492d3aadaadaaf0 \
+                    size    103155
 
 if {${name} ne ${subport}} {
-    depends_lib-append  port:py${python.version}-numpy
-
-    if {${python.version} eq 27} {
-        version             2.7.1
+    if {${python.version} eq 38} {
+        version             2.8.6
         revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  a2d301d01e5148b07eca9fa9e0650d0c986bde36 \
-                            sha256  b0d239d9827e1bcee08344fd05835823bc60aff97232e35a928214d03ff802b1 \
-                            size    99196
-        python.pep517       no
-        depends_build-append \
-                            port:py${python.version}-setuptools
-    } else {
-        post-patch {
-            reinplace "s|oldest-supported-numpy|numpy|g" ${worksrcpath}/pyproject.toml
-        }
+        epoch               1
+        checksums           rmd160  9551ad1fc91871751591cf4c3a67181fa2f8bc8b \
+                            sha256  6336f8dba3f456e41a4ffc3c97eb63d89c73589ff6e1707141224b930263260d \
+                            size    102376
     }
+
+    depends_build-append \
+                        port:py${python.version}-oldest-supported-numpy
+    depends_lib-append  port:py${python.version}-numpy
 
     post-destroot {
         xinstall -m 755 -d ${destroot}${prefix}/share/doc/${subport}
