gtkwave: Reverted to using gtk2
Closes: https://trac.macports.org/ticket/69290

--- a/cad/gtkwave/Portfile
+++ b/cad/gtkwave/Portfile
@@ -5,7 +5,7 @@ PortGroup       app 1.0
 
 name            gtkwave
 version         3.3.117
-revision        0
+revision        1
 
 categories      cad
 license         GPL-2+
@@ -28,8 +28,8 @@ depends_build-append \
 
 depends_lib-append \
                 port:bzip2 \
-                path:lib/pkgconfig/gtk+-3.0.pc:gtk3 \
-                port:gtk-osx-application-gtk3 \
+                path:lib/pkgconfig/gtk+-2.0.pc:gtk2 \
+                port:gtk-osx-application-gtk2 \
                 path:lib/pkgconfig/harfbuzz.pc:harfbuzz \
                 path:lib/pkgconfig/pango.pc:pango \
                 port:tk \
@@ -40,6 +40,8 @@ configure.args-append \
                 --with-tcl=${prefix}/lib \
                 --with-tk=${prefix}/lib \
                 --disable-mime-update \
+                "GTK_MAC_CFLAGS=\"\$(${prefix}/bin/pkg-config --cflags gtk-mac-integration-gtk2)\"" \
+                "GTK_MAC_LIBS=\"\$(${prefix}/bin/pkg-config --libs gtk-mac-integration-gtk2)\""\
                 --disable-silent-rules
 
 post-activate {
