openjdk21: update homepage and master_sites

--- a/java/openjdk21/Portfile
+++ b/java/openjdk21/Portfile
@@ -14,8 +14,8 @@ maintainers         {breun.nl:nils @breun} openmaintainer
 description         OpenJDK 21
 long_description    JDK 21 builds of OpenJDK, the Open-Source implementation \
                     of the Java Platform, Standard Edition, and related projects.
-homepage            https://openjdk.java.net/
-master_sites        https://git.openjdk.java.net/jdk21u/archive/refs/tags
+homepage            https://openjdk.org/projects/jdk/21/
+master_sites        https://github.com/openjdk/jdk21u/archive/refs/tags
 distname            jdk-${version}-ga
 worksrcdir          jdk21u-${distname}
 
