--- a/graphics/converseen/Portfile
+++ b/graphics/converseen/Portfile
@@ -6,7 +6,7 @@ PortGroup           cmake 1.0
 PortGroup           github 1.0
 PortGroup           qt5 1.0
 
-github.setup        Faster3ck converseen 0.12.0.2 v
+github.setup        Faster3ck converseen 0.12.1.0 v
 revision            0
 categories          graphics
 license             GPL-3
@@ -15,9 +15,9 @@ description         Converseen is an open source batch image converter and resiz
 long_description    {*}${description} Thanks to the Magick++ image libraries it supports \
                     more than 100 image formats.
 
-checksums           rmd160  aa5f8b3250fa5e52521546d055793fc4d30f2733 \
-                    sha256  f265c089f9ddb2d9a8c835c38f2ebc3d3164b26d5786a14575f2bc8eac8c0534 \
-                    size    2305881
+checksums           rmd160  a30e5603054751edfc609417892cbfdf360229ff \
+                    sha256  9dd97dca66519b0d6a24534abe01a0ab288b09ad1515e81c3cc1aaec703711dc \
+                    size    938464
 
 depends_lib-append  port:ImageMagick
 
