openjdk17: update URLs

--- a/java/openjdk17/Portfile
+++ b/java/openjdk17/Portfile
@@ -14,8 +14,8 @@ maintainers         {outlook.com:usersword123 @usersxx} openmaintainer
 description         OpenJDK 17
 long_description    JDK 17 builds of OpenJDK, the Open-Source implementation \
                     of the Java Platform, Standard Edition, and related projects.
-homepage            https://openjdk.java.net/
-master_sites        https://git.openjdk.java.net/jdk17u/archive/refs/tags
+homepage            https://openjdk.org/projects/jdk/17/
+master_sites        https://github.com/openjdk/jdk17u/archive/refs/tags
 distname            jdk-${version}-ga
 worksrcdir          jdk17u-${distname}
 
