openjdk11: update URLs

--- a/java/openjdk11/Portfile
+++ b/java/openjdk11/Portfile
@@ -14,8 +14,8 @@ maintainers         {outlook.com:usersword123 @usersxx} openmaintainer
 description         OpenJDK 11
 long_description    JDK 11 builds of OpenJDK, the Open-Source implementation \
                     of the Java Platform, Standard Edition, and related projects.
-homepage            https://openjdk.java.net/
-master_sites        https://git.openjdk.java.net/jdk11u/archive/refs/tags
+homepage            https://openjdk.org/projects/jdk/11/
+master_sites        https://github.com/openjdk/jdk11u/archive/refs/tags
 distname            jdk-${version}-ga
 worksrcdir          jdk11u-${distname}
 
