octave-sqlite: use new octave PG API

--- a/octave/octave-sqlite/Portfile
+++ b/octave/octave-sqlite/Portfile
@@ -1,18 +1,15 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           octave 1.0
 
-version             0.1.0
+octave.setup        github gnu-octave octave-sqlite 0.1.0 v
+octave.module       sqlite
 revision            0
-github.setup        gnu-octave octave-sqlite ${version} v
-octave.setup        sqlite ${version}
 license             GPL-3+
 maintainers         {mps @Schamschula} openmaintainer
 description         Basic Octave implementation of the sqlite toolkit
 long_description    {*}${description}
-homepage            https://github.com/gnu-octave/octave-sqlite/
 
 supported_archs     noarch
 platforms           {darwin any}
