openjdk8: Update homepage.
Co-authored-by: Nils Breunese <nils@breun.nl>

--- a/java/openjdk8/Portfile
+++ b/java/openjdk8/Portfile
@@ -20,7 +20,7 @@ maintainers         {outlook.com:usersword123 @usersxx} openmaintainer
 description         OpenJDK 8
 long_description    JDK 8 and JRE 8 builds of OpenJDK, the Open-Source implementation \
                     of the Java Platform, Standard Edition, and related projects.
-homepage            https://openjdk.org/
+homepage            https://openjdk.org/projects/jdk8u/
 master_sites        https://github.com/openjdk/jdk8u/archive/refs/tags/
 
 distname            jdk${major}u${update}-ga
