--- a/octave/octave-tsa/Portfile
+++ b/octave/octave-tsa/Portfile
@@ -3,19 +3,20 @@
 PortSystem          1.0
 PortGroup           octave 1.0
 
-octave.setup        tsa 4.6.3
+octave.setup        sourceforge octave tsa 4.6.3
 revision            0
-platforms           any
+platforms           darwin
 license             GPL-3+
 maintainers         {mps @Schamschula} openmaintainer
 description         Stochastic concepts and maximum entropy \
                     methods for time series analysis.
 long_description    {*}${description}
 
+supported_archs     noarch
+platforms           {darwin any}
+
 checksums           rmd160  c441cbdafb902cd56e9727e2db3a4d45150aabd3 \
                     sha256  54f3bce33dd439fea60e7d36252c04d6c6b313a632de6ce204f61ed6cfc17ddd \
                     size    85403
 
 depends_lib-append  port:octave-nan
-
-supported_archs     noarch
