--- a/octave/octave-vrml/Portfile
+++ b/octave/octave-vrml/Portfile
@@ -3,11 +3,11 @@
 PortSystem          1.0
 PortGroup           octave 1.0
 
-octave.setup        vrml 1.0.13
+octave.setup        sourceforge octave vrml 1.0.13
 revision            5
-platforms           any
+platforms           darwin
 license             GPL-3+ GFDL
-maintainers         nomaintainer
+maintainers         {mps @Schamschula} openmaintainer
 description         3D graphics using VRML.
 long_description    {*}${description}
 
@@ -16,6 +16,7 @@ checksums           rmd160  c07aa8303d29ccdee00c92271088dd9bc3c11267 \
                     size    1115406
 
 supported_archs     noarch
+platforms           {darwin any}
 
 depends_lib-append  port:octave-linear-algebra \
                     port:octave-miscellaneous \
