Add address `openmaintainer`
Co-authored-by: Herby Gillot <herby.gillot@gmail.com>

--- a/sysutils/sshpass/Portfile
+++ b/sysutils/sshpass/Portfile
@@ -7,7 +7,7 @@ version             1.10
 categories          sysutils
 license             GPL-2
 platforms           darwin
-maintainers         @manakbisht
+maintainers         @manakbisht openmaintainer
 
 description         Non-interactive ssh password authentication
 
