Update homepage URL to HTTPS
Co-authored-by: Herby Gillot <herby.gillot@gmail.com>

--- a/sysutils/sshpass/Portfile
+++ b/sysutils/sshpass/Portfile
@@ -27,7 +27,7 @@ long_description    SSH's (secure shell) most common authentication mode is \
                     conjunction with the ssh agent (RTFM ssh-add), please do \
                     so before being tempted into using this package.
 
-homepage            http://sourceforge.net/projects/sshpass/
+homepage            https://sourceforge.net/projects/sshpass/
 master_sites        sourceforge:project/${name}/${name}/${version}
 
 checksums           rmd160  a355de629eafe270a47349c3c862f1e3d9872e08 \
