p5-business-isbn-data: update to version 20240206.001

--- a/perl/p5-business-isbn-data/Portfile
+++ b/perl/p5-business-isbn-data/Portfile
@@ -4,7 +4,8 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.branches      5.28 5.30 5.32 5.34
-perl5.setup         Business-ISBN-Data 20240126.001 ../../authors/id/B/BD/BDFOY
+perl5.setup         Business-ISBN-Data 20240206.001 ../../authors/id/B/BD/BDFOY
+revision            0
 license             Artistic-2
 maintainers         nomaintainer
 description         ISBN data required for use of Business::ISBN
@@ -17,6 +18,6 @@ long_description    This package provides ISBN data used by the \
 platforms           {darwin any}
 supported_archs     noarch
 
-checksums           rmd160  c2b1197cec840b52aaffd42d9a3dfa5ae658fd62 \
-                    sha256  8423c522a3dfbbc0daeff12d89d815bc2400470827d409f1985b17fd599d526e \
-                    size    33440
+checksums           rmd160  52068c27e058b740aba1ad90406e370bddd9f3c0 \
+                    sha256  e08c9fb888eeecf5130301ad2440ee3204033efa4d1456404b80fa9599a7db27 \
+                    size    33491
