--- a/net/scw/Portfile
+++ b/net/scw/Portfile
@@ -3,27 +3,33 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/scaleway/scaleway-cli 2.19.0 v
+go.setup            github.com/scaleway/scaleway-cli 2.26.0 v
 go.offline_build    no
 github.tarball_from archive
+revision            0
 name                scw
+
+homepage            https://www.scaleway.com/en/cli/
 
 categories          net
 installs_libs       no
 license             Apache-2
-
-maintainers         {gmail.com:davidriod @dgsb} openmaintainer
+maintainers         {gmail.com:davidriod @dgsb} \
+                    {gmail.com:herby.gillot @herbygillot} \
+                    openmaintainer
 
 description         Command Line Interface for Scaleway
 
 long_description    Scaleway CLI is a tool to help you pilot your Scaleway \
                     infrastructure directly from your terminal.
 
-checksums           rmd160  fb2e568802907bebae637ede5cc31cebd399e5fc \
-                    sha256  5b728c364aac9d7b9785d5f6c9f06972d126d9125f719bfa73aa705411256b6e \
-                    size    3380628
+checksums           rmd160  643b670cb482388b978943d7cc3c742277d63826 \
+                    sha256  2fb389135d359afda4798b05ab2babba67c56cbbfe74b7ce2756c647f847c7d8 \
+                    size    2329780
 
-build.target        ./cmd/scw
+build.pre_args-append \
+    -ldflags \" -X main.Version=${github.tag_prefix}${version} \"
+build.args          ./cmd/scw
 
 destroot {
     xinstall -m 0755 ${worksrcpath}/${name} ${destroot}${prefix}/bin/${name}
