--- a/sysutils/PineFlash/Portfile
+++ b/sysutils/PineFlash/Portfile
@@ -5,8 +5,8 @@ PortGroup               github 1.0
 PortGroup               cargo  1.0
 PortGroup               app 1.1
 
-github.setup            Spagett1 PineFlash 0.5.3
-revision                2
+github.setup            Spagett1 PineFlash 0.5.4
+revision                0
 
 categories              sysutils aqua
 license                 GPL-2
@@ -15,9 +15,9 @@ description             A GUI tool to flash IronOS to the Pinecil V1, V2 and fut
 long_description        {*}${description}
 
 checksums               ${name}-${version}${extract.suffix} \
-                        rmd160  0977af8b79ad25d7a217fdf080a2a0125118a06c \
-                        sha256  0286cf9b10e8d6c06ae5340a3dfe3e225a381146945ad035375b37f81dcad878 \
-                        size    15598424
+                        rmd160  36637dcde7302f6c07d984f15860153f32cd634d \
+                        sha256  5c05bc332a1354830e34c5b20057d8f55957b59cbceee26d9b7bedb485baf0e7 \
+                        size    15598195
 
 depends_lib-append      port:curl \
                         port:libusb \
@@ -29,8 +29,7 @@ post-patch {
     reinplace "s|pine64logo.ico|pine64logo.png|" ${worksrcpath}/src/main.rs
     reinplace "s|\(32\)|\(128\)|g" ${worksrcpath}/src/main.rs
     reinplace "s|MacOs|macOS|" ${worksrcpath}/src/main.rs
-    reinplace "s|target_os = \"linux\"|target_os = \"macos\"|g" ${worksrcpath}/src/submodules/main_panel.rs
-    reinplace "s|:linux|:${prefix}/bin|" ${worksrcpath}/src/submodules/main_panel.rs
+    reinplace "s|/usr/local/sbin:|${prefix}/bin$${prefix}/sbin:/usr/local/sbin:|" ${worksrcpath}/src/submodules/main_panel.rs
 }
 
 destroot   {}
