--- a/python/py-joblib/Portfile
+++ b/python/py-joblib/Portfile
@@ -11,7 +11,7 @@ license             BSD
 platforms           {darwin any}
 supported_archs     noarch
 
-python.versions     35 36 37 38 39 310 311
+python.versions     35 36 37 38 39 310 311 312
 python.pep517       yes
 
 maintainers         {stromnov @stromnov} openmaintainer
