--- a/python/py-aioitertools/Portfile
+++ b/python/py-aioitertools/Portfile
@@ -11,7 +11,7 @@ platforms           {darwin any}
 license             MIT
 supported_archs     noarch
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 python.pep517_backend   flit
 
 maintainers         {stromnov @stromnov} openmaintainer
