haskell-language-server: Minor fixes and standalone binary
* Fix homepage
* Build as standalone binary
* Keep dynamic build variant as must be used with same ghc version

--- a/devel/haskell-language-server/Portfile
+++ b/devel/haskell-language-server/Portfile
@@ -5,7 +5,7 @@ PortGroup           haskell_cabal 1.0
 
 name                haskell-language-server
 version             2.6.0.0
-revision            0
+revision            1
 categories          devel haskell
 maintainers         nomaintainer
 license             GPL-3
@@ -26,9 +26,7 @@ long_description    The haskell-language-server (HLS) project is an \
                     editor support for the LSP protocol is now \
                     widespread.
 
-homepage            https://hackage.haskell.org/package/haskell-language-server
-
-master_sites        https://hackage.haskell.org/package/${name}-${version}
+homepage            https://github.com/haskell/haskell-language-server
 
 checksums           rmd160  66c0d520c28d2a8e4a1ca0e3665f2aa73ed75582 \
                     sha256  3655b8d741616f8e32d0181274f80a48d9b8dca47d3fd22675cadfa01ca80e48 \
@@ -40,7 +38,6 @@ set paths_name_underscore   src/Paths_${name_underscore}.hs
 # relative paths to ${prefix}
 set hls_libdir      lib/${distname}
 set hls_docdir      share/doc/${distname}/html
-
 
 post-extract {      
     # Fix for cabal data-files hardcoded path in binary
@@ -66,16 +63,44 @@ post-extract {
 depends_build-append \
                     port:file
 
-# see ${name}.cabal for build specifics
-# install depends on ghc version libraries, not simply `path:bin/ghc:ghc`
-depends_lib-append  port:ghc
+depends_lib-append  path:bin/ghc:ghc
 
-build.target
+depends_run-append  port:cabal \
+                    port:hscolour
+
+variant dynamic \
+    description {Use ghc-specific dynamic libraries for installation.} {}
+
+build.target        all
+# turn off dynamic library linking
 build.post_args-prepend \
+                    --flags=-dynamic
+
+if { [variant_isset "dynamic"] } {
+    # see ${name}.cabal for build specifics
+    # install depends on ghc version libraries, not simply `path:bin/ghc:ghc`
+    depends_lib-replace \
+                    path:bin/ghc:ghc \
+                    port:ghc
+
+    build.target
+    # turn on dynamic library linking
+    build.post_args-replace \
+                    --flags=-dynamic \
                     -fdynamic
+
+    post-destroot {
+        # fix and install all libraries
+        shared_library_chase \
+                    ${destroot}${prefix}/bin/${name} \
+                    ${prefix}/${hls_libdir} \
+                    {@rpath/libHS.+\.dylib}
+    }
+}
 
 set hls_build_binary    {}
 set hls_build_doc       {}
+
 pre-destroot {
     set hls_build_binary \
         [glob -nocomplain ${workpath}/dist/build/*/ghc-*/${name}-${version}/x/${name}/build/${name}/${name}]
@@ -90,11 +115,9 @@ destroot {
     xinstall -m 0755 ${hls_build_binary} \
                     ${destroot}${prefix}/bin/${name}
 
-    # fix and install all libraries
-    shared_library_chase \
-        ${destroot}${prefix}/bin/${name} \
-        ${prefix}/${hls_libdir} \
-        {@rpath/libHS.+\.dylib}
+    # ${name}-wrapper must point to the correct binary
+    ln -s ${prefix}/bin/${name} \
+                    ${destroot}${prefix}/bin/${name}-wrapper
 
     # documentation
     foreach f [glob ${hls_build_doc}/*.{css,html,json,png}] {
@@ -109,7 +132,12 @@ destroot {
     }
 }
 
-notes "The Haskell Language Server (HLS) User Manual is available at:
+notes "The Haskell Language Server (HLS) must be used with the same\
+      version of GHC with which it was built.
+
+For an Emacs client, use `M-x package-install lsp-haskell`.
+
+The HLS User Manual is available at:
 
 file://${prefix}/${hls_docdir}/index.html"
 
