--- a/python/py-spyder/Portfile
+++ b/python/py-spyder/Portfile
@@ -6,7 +6,7 @@ PortGroup           python 1.0
 PortGroup           qt5 1.0
 PortGroup           select 1.0
 
-github.setup        spyder-ide spyder 5.5.0 v
+github.setup        spyder-ide spyder 5.5.1 v
 github.tarball_from archive
 name                py-spyder
 revision            1
@@ -31,9 +31,9 @@ long_description    {*}${description}. \
 
 homepage            https://www.spyder-ide.org/
 
-checksums           rmd160  b29a2d4b910a38b847f2f14d36fd009ff18930d7 \
-                    sha256  8d7d86add5147698da0e3658ed65c2a594727130027a69fc62e719f59e32ae86 \
-                    size    16251845
+checksums           rmd160  8c260165db65c634511a538c7565c3ced7ed4cc2 \
+                    sha256  d0d62f1bca301e875927012f2013f3442c9a3ad5528243f7fd1c47b5f180c399 \
+                    size    16254673
 
 python.versions     38 39 310 311 312
 
@@ -104,8 +104,7 @@ if {${name} ne ${subport}} {
                     patch-spyder_app_start.py.diff \
                     patch-spyder_app_utils.py.diff \
                     patch-spyder_utils_programs.py.diff \
-                    patch-spyder_config_lsp.py.diff \
-                    patch-version-python-lsp-server.diff
+                    patch-spyder_config_lsp.py.diff
 
     set PYLS_BIN_NAME   pyls-${python.branch}
 
