fizz: fix build on i386 with libstdc++

--- a/devel/fizz/Portfile
+++ b/devel/fizz/Portfile
@@ -49,10 +49,10 @@ depends_lib-append  port:bzip2 \
 
 cmake.source_dir    ${worksrcpath}/${name}
 
-# At the moment unclear whether it is a libstdc++ issue or specifically
-# powerpc issue. But Macports only uses libstdc++ on powerpc anyway.
+# Confirmed to fail both on powerpc and i386
+# if libstdc++ with gcc are used.
 # https://github.com/facebookincubator/fizz/issues/109
-platform darwin powerpc {
+if {${configure.cxx_stdlib} ne "libc++"} {
     patchfiles-append \
                     0001-Revert-Read-b64-encoded-ECH-Config-List-in-fizz-clie.patch \
                     0002-Revert-235358c8b2e613b85d47b2088c21f7bd344910ec.patch
