--- a/lang/solidity/Portfile
+++ b/lang/solidity/Portfile
@@ -4,10 +4,9 @@ PortSystem          1.0
 
 PortGroup           github 1.0
 PortGroup           cmake 1.1
-PortGroup           boost 1.0
 
-github.setup        ethereum solidity 0.8.19 v
-github.tarball_from downloads
+github.setup        ethereum solidity 0.8.24 v
+github.tarball_from releases
 distname            ${github.project}_${github.version}
 
 revision            0
@@ -24,36 +23,20 @@ long_description    Solidity is a statically typed, contract-oriented, \
                     high-level language for implementing smart contracts \
                     on the Ethereum platform.
 homepage            https://soliditylang.org
-master_sites        https://github.com/ethereum/solidity/releases/download/v${github.version}/
 
-checksums           rmd160  df322fa402d7fc3d1c6643c0136a44251189ce28 \
-                    sha256  9bc195e1695f271b65326c73a12223377d52ae4b4fee10589c5e7bde6fa44194 \
-                    size    3239230
+checksums           rmd160  14a80ba6315744ec6892405a91b0ce22195cb78f \
+                    sha256  def2ab7c877fcd16c81a166cdc5b99bfabcee7e8d505afcce816e9b1e451c61a \
+                    size    3386993
 
-set port_libfmt     libfmt9
-
-depends_build-append \
-                    port:${port_libfmt} \
-                    port:range-v3
-depends_lib         port:jsoncpp
-
-cmake.module_path-append \
-                    ${prefix}/lib/${port_libfmt}/cmake
+depends_lib-append  port:boost
 
 compiler.cxx_standard \
                     2017
 
 configure.args      -DTESTS:BOOL=OFF \
                     -DBoost_USE_STATIC_LIBS:BOOL=OFF \
-                    -DWITH_Z3:BOOL=OFF \
-                    -DWITH_CVC4:BOOL=OFF \
-                    -DUSE_LD_GOLD:BOOL=OFF \
-                    -DRANGE_V3_INCLUDE_DIR:PATH="${prefix}/include" \
-                    -DJSONCPP_INCLUDE_DIR:PATH="${prefix}/include/jsoncpp" \
-                    -DJSONCPP_LIB_DIR:PATH="${prefix}/lib"
-
-patchfiles-append   patch-cmake_range-v3.cmake.diff \
-                    patch-libsolutil_JSON.cpp.diff
+                    -DUSE_Z3:BOOL=OFF \
+                    -DUSE_CVC4:BOOL=OFF
 
 default_variants    +z3
 
@@ -63,27 +46,14 @@ variant z3 description {SMT Checker via Z3} {
     configure.args-append \
         -DSTRICT_Z3_VERSION:BOOL=OFF
     configure.args-replace \
-        -DWITH_Z3:BOOL=OFF \
-        -DWITH_Z3:BOOL=ON
+        -DUSE_Z3:BOOL=OFF \
+        -DUSE_Z3:BOOL=ON
 }
 
 variant cvc4 description {SMT Checker via CVC4} {
     depends_lib-append \
         port:cvc4
     configure.args-replace \
-        -DWITH_CVC4:BOOL=OFF \
-        -DWITH_CVC4:BOOL=ON
-}
-
-pre-test {
-    configure.args-replace \
-        -DTESTS:BOOL=OFF
-        -DTESTS:BOOL=ON
-}
-
-post-patch {
-    file copy -force ${filespath}/fmtlib.cmake ${worksrcpath}/cmake/
-    file copy -force ${filespath}/jsoncpp.cmake ${worksrcpath}/cmake/
-
-    reinplace "/EthCcache/ d" ${worksrcpath}/CMakeLists.txt
+        -DUSE_CVC4:BOOL=OFF \
+        -DUSE_CVC4:BOOL=ON
 }
