Remove gpanders as port maintainer

--- a/lua/stylua/Portfile
+++ b/lua/stylua/Portfile
@@ -8,8 +8,7 @@ github.setup        johnnymorganz stylua 0.19.1 v
 revision            0
 categories          lua
 platforms           darwin
-maintainers         {gpanders.com:greg @gpanders} \
-                    {judaew @judaew} \
+maintainers         {judaew @judaew} \
                     openmaintainer
 license             MPL-2
 
