--- a/python/py-ansicolor/Portfile
+++ b/python/py-ansicolor/Portfile
@@ -11,8 +11,7 @@ categories-append   devel
 license             Apache-2
 platforms           {darwin any}
 supported_archs     noarch
-maintainers         {@gpanders gpanders.com:greg} \
-                    openmaintainer
+maintainers         nomaintainer
 
 description         A library to produce ANSI color output
 long_description    {*}${description} and colored highlighting and diffing.
