--- a/sysutils/netdata/Portfile
+++ b/sysutils/netdata/Portfile
@@ -10,8 +10,7 @@ revision                0
 
 distname                ${name}-v${version}
 
-maintainers             {@gpanders gpanders.com:greg} \
-                        {gmail.com:herby.gillot @herbygillot} \
+maintainers             {gmail.com:herby.gillot @herbygillot} \
                         openmaintainer
 categories              sysutils
 license                 GPL-3
