arti: update to 1.1.13

--- a/security/arti/Portfile
+++ b/security/arti/Portfile
@@ -5,7 +5,7 @@ PortGroup           cargo   1.0
 PortGroup           gitlab  1.0
 
 gitlab.instance     https://gitlab.torproject.org/tpo
-gitlab.setup        core arti 1.1.12 arti-v
+gitlab.setup        core arti 1.1.13 arti-v
 revision            0
 
 homepage            https://tpo.pages.torproject.net/core/arti
@@ -19,10 +19,12 @@ license             Apache-2 MIT
 maintainers         {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
+distname            ${name}-${gitlab.tag_prefix}${version}
+
 checksums           ${distname}${extract.suffix} \
-                    rmd160  ca603e895d644c51d9283404d0eabb45cfa3bd03 \
-                    sha256  772c974e52e4df0aee3b912dc45e85dc04bec7d7c02c8f6ddd500e92ae4d77b5 \
-                    size    3421442
+                    rmd160  25aadf3e4f55fc964b67d5e4be8611234b31acfb \
+                    sha256  f169a4ed9f0c17f72dacfee3402929ca433b9ce3a9292e16ef8a674bfbe5de68 \
+                    size    3443033
 
 notes "
     ${name} is ready for production use but there are features missing such as onion service support.
@@ -33,6 +35,9 @@ destroot {
     xinstall -m 0755 \
         ${worksrcpath}/target/[cargo.rust_platform]/release/${name} \
         ${destroot}${prefix}/bin/
+
+    xinstall -d ${destroot}${prefix}/share/doc/${name}
+    file copy {*}[glob ${worksrcpath}/doc/*] ${destroot}${prefix}/share/doc/${name}/
 }
 
 cargo.crates \
@@ -72,7 +77,6 @@ cargo.crates \
     async-lock                       3.2.0  7125e42787d53db9dd54261812ef17e937c95a51e4d291373b670342fa44310c \
     async-native-tls                 0.5.0  9343dc5acf07e79ff82d0c37899f079db3534d99f189a1837c8e549c99405bec \
     async-process                    1.8.1  ea6438ba0a08d81529c69b36700fa2f95837bfe3e776ab39cde9c14d9149da88 \
-    async-rustls                     0.4.1  bd10f063fb367d26334e10c50c67ea31ac542b8c3402be2251db4cfc5d74ba66 \
     async-signal                     0.2.5  9e47d90f65a225c4527103a8d747001fc56e375203592b25ad103e1ca13124c5 \
     async-std                       1.12.0  62565bb4402e926b29953c785397c6dc0391b7b446e45008b0049eb43cec6f5d \
     async-task                       4.7.0  fbb36e985947064623dbd357f727af08ffd077f93d696782f3c56365fa2e2799 \
@@ -169,7 +173,6 @@ cargo.crates \
     enum-ordinalize                 3.1.15  1bf1fa3f06bbff1ea5b1a9c7b14aa992a39657db60a2759457328d7e058f49ee \
     env_logger                      0.5.13  15b0a4d2e39f8420210be8b27eeda28029729e2fd4291019455016c348240c38 \
     equivalent                       1.0.1  5443807d6dff69373d433ab9ef5378ad8df50ca6298caf15de6e52e24aaf54d5 \
-    erased-serde                    0.3.31  6c138974f9d5e7fe373eb04df7cae98833802ae4b11c24ac7039a21d5af4b26c \
     erased-serde                     0.4.2  55d05712b2d8d88102bc9868020c9e5c7a1f5527c452b9b97450a1d006140ba7 \
     errno                            0.3.8  a258e46cdc063eb8519c00b9fc845fc47bcfca4130e2f08e88665ceda8474245 \
     event-listener                   2.5.3  0206175f82b8d6bf6652ff7d71a1e27fd2e4efde587fd368662814d6ec1d9ce0 \
@@ -196,6 +199,7 @@ cargo.crates \
     foreign-types-shared             0.1.1  00b0228411908ca8685dba7fc2cdd70ec9990a6e753e89b6ac91a84c40fbaf4b \
     form_urlencoded                  1.2.1  e13624c2627564efccf4934284bdd98cbaa14e79b0b5a141218e507b3a823456 \
     fslock                           0.2.1  04412b8935272e3a9bae6f48c7bfff74c2911f60525404edfdd28e49884c3bfb \
+    fslock-arti-fork                 0.2.0  8b21bd626aaab7b904b20bef6d9e06298914a0c8d9fb8b010483766b2e532791 \
     funty                            2.0.0  e6d5a32815ae3f33302d95fdcb2ce17862f8c65363dcfd29360480ba1001fc9c \
     futures                         0.3.30  645c6916888f6cb6350d2550b80fb63e734897a8498abe35cfb732b6487804b0 \
     futures-await-test               0.3.0  ae0d3d05bce73a572ba581e4f4a7f20164c18150169c3a67f406aada3e48c7e8 \
@@ -207,6 +211,7 @@ cargo.crates \
     futures-lite                    1.13.0  49a9d51ce47660b1e808d3c990b4709f2f415d928835a17dfd16991515c46bce \
     futures-lite                     2.2.0  445ba825b27408685aaecefd65178908c36c6e96aaf6d8599419d46e624192ba \
     futures-macro                   0.3.30  87750cf4b7a4c0625b1529e4c543c2182106e4dedc60a2a6455e00d212c489ac \
+    futures-rustls                  0.25.1  c8d8a2499f0fecc0492eb3e47eab4e92da7875e1028ad2528f214ac3346ca04e \
     futures-sink                    0.3.30  9fb8e00e87438d937621c1c6269e53f536c14d3fbd6a042bb24879e57d474fb5 \
     futures-task                    0.3.30  38d84fa142264698cdce1a9f9172cf383a0c82de1bddcf3092901442c4097004 \
     futures-util                    0.3.30  3d6401deb83407ab3da39eba7e33987a73c3df0c82b4bb5813ee871c19c41d48 \
@@ -233,13 +238,17 @@ cargo.crates \
     http                            0.2.11  8947b1a6fad4393052c7ba1f4cd97bed3e953a95c79c92ad9b051a04611d9fbb \
     http                             1.0.0  b32afd38673a8016f7c9ae69e5af41a58f81b1d31689040f2f1959594ce194ea \
     http-body                        0.4.6  7ceab25649e9960c0311ea418d17bee82c0dcec1bd053b5f9a66e265a693bed2 \
+    http-body                        1.0.0  1cac85db508abc24a2e48553ba12a996e87244a0395ce011e62b37158745d643 \
+    http-body-util                   0.1.0  41cb79eb393015dadd30fc252023adb0b2400a0caee0fa2a077e6e21a551e840 \
     httparse                         1.8.0  d897f394bad6a705d5f4104762e116a75639e470d80901eed05a860a95cb1904 \
     httpdate                         1.0.3  df3b46402a9d5adb4c86a0cf463f42e19994e3ee891101b1841f30a545cb49a9 \
     humantime                        1.3.0  df004cfca50ef23c36850aaaa59ad52cc70d0e90243c3c7737a4dd32dc7a3c4f \
     humantime                        2.1.0  9a3a5bfb195931eeb336b2a7b4d761daec841b97f947d34394601737a7bba5e4 \
     humantime-serde                  1.1.1  57a3db5ea5923d99402c94e9feb261dc5ee9b4efa158b0315f788cf549cc200c \
     hyper                          0.14.28  bf96e135eb83a2a8ddf766e426a841d8ddd7449d5f00d34ea02b41d2f19eef80 \
-    iana-time-zone                  0.1.59  b6a67363e2aa4443928ce15e57ebae94fd8949958fd1223c4cfc0cd473ad7539 \
+    hyper                            1.1.0  fb5aa53871fc917b1a9ed87b683a5d86db645e23acb32c2e0785a353e522fb75 \
+    hyper-util                       0.1.2  bdea9aac0dbe5a9240d68cfd9501e2db94222c6dc06843e06640b9e07f0fdc67 \
+    iana-time-zone                  0.1.60  e7ffbb5a1b541ea2561f8c41c087286cc091e21e556a4f09a8f6cbf17b69b141 \
     iana-time-zone-haiku             0.1.2  f31827a206f56af32e590ba56d5d2d085f558508192593743f16b2306495269f \
     ident_case                       1.0.1  b9e0384b61958566e926dc50660321d12159025e767c18e043daf26b70104c39 \
     idna                             0.4.0  7d20d6b07bfbc108882d88ed8e37d39636dcc260e15e30c45e6ba089610b917c \
@@ -378,8 +387,9 @@ cargo.crates \
     rustc_version                    0.4.0  bfa0f585226d2e68097d4f95d113b15b83a82e819ab25717ec0590d9584ef366 \
     rustix                         0.37.27  fea8ca367a3a01fe35e6943c400addf443c0f57670e6ec51196f71a4b8762dd2 \
     rustix                         0.38.28  72e572a5e8ca657d7366229cdde4bd14c4eb5499a9573d4d366fe1b599daa316 \
-    rustls                         0.21.10  f9d5a6813c0759e4609cd494e8e725babae6a2ca7b62a5536a13daaec6fcb7ba \
-    rustls-webpki                  0.101.7  8b6275d1ee7a1cd780b64aca7726599a1dbc893b1e64144529e55c3c2f745765 \
+    rustls                          0.22.2  e87c9956bd9807afa1f77e0f7594af32566e830e088a5576d27c5b6f30f49d41 \
+    rustls-pki-types                 1.1.0  9e9d979b3ce68192e42760c7810125eb6cf2ea10efae545a156063e61f314e2a \
+    rustls-webpki                  0.102.1  ef4ca26037c909dedb327b48c3327d0ba91d3dd3c4e05dad328f210ffb68e95b \
     rustversion                     1.0.14  7ffc183a10b4478d04cbbbfc96d0873219d962dd5accaff2ffbd4ceb7df837f4 \
     ryu                             1.0.16  f98d2aa92eebf49b69786be48e4477826b256916e84a57ff2a4f21923b48eb4c \
     safe_arch                        0.7.1  f398075ce1e6a179b46f51bd88d0598b92b00d3551f1a2d4ac49e771b56ac354 \
@@ -387,7 +397,6 @@ cargo.crates \
     sanitize-filename                0.5.0  2ed72fbaf78e6f2d41744923916966c4fbe3d7c74e3037a8ee482f1115572603 \
     schannel                        0.1.23  fbc91545643bcf3a0bbb6569265615222618bdf33ce4ffbbd13c4bbd4c093534 \
     scopeguard                       1.2.0  94143f37725109f92c262ed2cf5e59bce7498c01bcc1502d7b9afe439a4e9f49 \
-    sct                              0.7.1  da046153aa2352493d6cb7da4b6e5c0c057d8a1d0a9aa8560baffdd945acd414 \
     sec1                             0.7.3  d3e97a565f76233a6003f9f5c54be1d9c5bdfa3eccfb189469f11ec4901c47dc \
     secmem-proc                      0.3.2  0b19a1b87c3bab9f9ce77a4317680035d068c6f3911fc3e0e37e0c80ae8d5254 \
     security-framework               2.9.2  05b64fb303737d99b81884b2c63433e9ae28abebe5eb5045dcdd175dc2ecf4de \
@@ -406,8 +415,8 @@ cargo.crates \
     serde_urlencoded                 0.7.1  d3491c14715ca2294c4d6a88f15e84739788c1d030eed8c110436aafdaa2f3fd \
     serde_with                       3.4.0  64cd236ccc1b7a29e7e2739f27c0b2dd199804abc4290e32f59f3b68d6405c23 \
     serde_with_macros                3.4.0  93634eb5f75a2323b16de4748022ac4297f9e76b6dced2be287a099f41b5e788 \
-    serial_test                      2.0.0  0e56dd856803e253c8f298af3f4d7eb0ae5e23a737252cd90bb4f3b435033b2d \
-    serial_test_derive               2.0.0  91d129178576168c589c9ec973feedf7d3126c01ac2bf08795109aa35b69fb8f \
+    serial_test                      3.0.0  953ad9342b3aaca7cb43c45c097dd008d4907070394bd0751a0aa8817e5a018d \
+    serial_test_derive               3.0.0  b93fb4adc70021ac1b47f7d45e8cc4169baaa7ea58483bc5b721d19a26202212 \
     sha1                            0.10.6  e3bf829a2d51ab4a5ddf1352d8470c140cadc8301b2ae1789db023f01cedd6ba \
     sha1-asm                         0.5.2  2ba6947745e7f86be3b8af00b7355857085dbdf8901393c89514510eb61f4e21 \
     sha2                            0.10.8  793db75ad2bcafc3ffa7c68b215fee268f537982cd901d132f89c6343f3a3dc8 \
@@ -437,7 +446,9 @@ cargo.crates \
     statrs                          0.16.0  2d08e5e1748192713cc281da8b16924fb46be7b0c2431854eadc785823e5696e \
     strsim                          0.10.0  73473c0e59e6d5812c5dfe2a064a6444949f089e20eec9a2e5506596494e4623 \
     strum                           0.25.0  290d54ea6f91c969195bdbcd7442c8c2a2ba87da8bf60a7ee86a235d4bc1e125 \
+    strum                           0.26.1  723b93e8addf9aa965ebe2d11da6d7540fa2283fcea14b3371ff055f7ba13f5f \
     strum_macros                    0.25.3  23dc1fa9ac9c169a78ba62f0b841814b7abae11bdd047b9c58f893439e309ea0 \
+    strum_macros                    0.26.1  7a3417fc93d76740d974a01654a09777cb500428cc874ca9f45edfe0c4d4cd18 \
     subtle                           2.5.0  81cdd64d312baedb58e21336b31bc043b77e01cc99033ce76ef539f78e965ebc \
     syn                            1.0.109  72b64191b275b66ffe2469e8af2c1cfe3bafa67b529ead792a6d0160888b4237 \
     syn                             2.0.48  0f3531638e407dfc0814761abb7c00a5b54992b849452a0646b7f65c9f770f3f \
@@ -463,6 +474,7 @@ cargo.crates \
     tls-api-test                     0.9.0  9df107843d725428d76bb159040fbae6d1524dcf25d5b24c56daa6b37ce9dbb5 \
     tokio                           1.35.1  c89b4efa943be685f629b149f53829423f8f5531ea21249408e8e2f8671ec104 \
     tokio-macros                     2.2.0  5b8a1e28f2deaa14e508979454cb3a223b10b938b45af148bc0986de36f1923b \
+    tokio-native-tls                 0.3.1  bbae76ab933c85776efabc971569dd6119c580d8f5d448769dec1764bf796ef2 \
     tokio-socks                      0.5.1  51165dfa029d2a65969413a6cc96f354b86b464498702f174a4efa13608fd8c0 \
     tokio-stream                    0.1.14  397c988d37662c7dda6d2208364a706264bf3d6138b11d436cbac0ad38832842 \
     tokio-util                      0.7.10  5419f34732d9eb6ee4c3578b7989078579b7f039cbbb9ca2c4da015749371e15 \
