imath: update to 3.1.10

--- a/graphics/imath/Portfile
+++ b/graphics/imath/Portfile
@@ -5,8 +5,8 @@ PortGroup                       cmake 1.1
 PortGroup                       github 1.0
 PortGroup                       legacysupport 1.1
 
-name                            imath
-github.setup                    AcademySoftwareFoundation Imath 3.1.9 v
+github.setup                    AcademySoftwareFoundation imath 3.1.10 v
+github.tarball_from             archive
 revision                        0
 
 categories                      graphics
@@ -23,11 +23,9 @@ long_description                Imath is a basic, light-weight, and efficient C+
 
 homepage                        https://www.openexr.com
 
-github.tarball_from             tarball
-
-checksums                       rmd160  be07d6f6766752d69f464ff52d3aa88b978f118a \
-                                sha256  b95c260a4dcf3f2d581013ef29cf838265f10ea463f0e05efd486b348f2ef63c \
-                                size    598707
+checksums                       rmd160  b463e098fedccdf4b8ada445bf2db98449698d0e \
+                                sha256  f2943e86bfb694e216c60b9a169e5356f8a90f18fbd34d7b6e3450be14f60b10 \
+                                size    595059
 
 # NOTE: legacysupport needed for 'CLOCK_MONOTONIC'
 
