--- a/databases/postgresql14/Portfile
+++ b/databases/postgresql14/Portfile
@@ -8,8 +8,8 @@ PortGroup muniversal 1.0
 
 #remember to update the -doc and -server as well
 name                postgresql14
-version             14.10
-revision            2
+version             14.11
+revision            0
 
 categories          databases
 platforms           darwin
@@ -29,15 +29,14 @@ master_sites        http://ftp3.de.postgresql.org/pub/Mirrors/ftp.postgresql.org
             postgresql:source/v${version}/
 distname            postgresql-${version}
 
-checksums           rmd160  b2e001d5c5115df81627e6625b2a4549f4fd9ad5 \
-                    sha256  c99431c48e9d470b0d0ab946eb2141a3cd19130c2fb4dc4b3284a7774ecc8399 \
-                    size    22298652
+checksums           rmd160  b5d6db79d47b1de6169ac10923232a2a24ad31a8 \
+                    sha256  a670bd7dce22dcad4297b261136b3b1d4a09a6f541719562aa14ca63bf2968a8 \
+                    size    22354758
 
 use_bzip2           yes
 
 # do not build man or html files (use postgresqlXY-doc instead)
-patchfiles-append   patch-no_doc.diff \
-                    patch-openssl32.diff
+patchfiles-append   patch-no_doc.diff
 
 # https://trac.macports.org/ticket/66060
 # https://postgrespro.ru/list/thread-id/2551610
