iv: fix for i386 build

--- a/devel/iv/Portfile
+++ b/devel/iv/Portfile
@@ -32,6 +32,9 @@ patchfiles-append   patch-gc-arm64.diff
 # https://github.com/Constellation/iv/pull/110
 patchfiles-append   patch-static-liblv5.diff
 
+# https://github.com/Constellation/iv/pull/111
+patchfiles-append   patch-fpu.h-fix-i386-on-macOS.diff
+
 post-patch {
     reinplace "s|__PREFIX__|${prefix}|" \
                     ${worksrcpath}/iv/lv5/CMakeLists.txt
