libmicrohttpd: update receipt
* removed unused dependencies
* enabled check
* removed unused configure parameter

--- a/www/libmicrohttpd/Portfile
+++ b/www/libmicrohttpd/Portfile
@@ -15,9 +15,7 @@ long_description    \
                     free software and part of the GNU project.
 homepage            https://www.gnu.org/software/libmicrohttpd/
 master_sites        gnu
-depends_lib         path:lib/pkgconfig/gnutls.pc:gnutls \
-                    port:libgcrypt \
-                    port:libgpg-error
+depends_lib         path:lib/pkgconfig/gnutls.pc:gnutls
 
 checksums           rmd160  80855a0cf18af2fb60b60b686122f4aa7b2c409a \
                     sha256  a02792d3cd1520e2ecfed9df642079d44a36ed87167442b28d7ed19e906e3e96 \
@@ -25,10 +23,8 @@ checksums           rmd160  80855a0cf18af2fb60b60b686122f4aa7b2c409a \
 
 patchfiles          patch-fix-gnutls-include.diff
 
-configure.args-append   --disable-spdy
-
-#test.run            yes
-#test.target         check
+test.run            yes
+test.target         check
 
 livecheck.type      regex
 livecheck.url       https://ftp.gnu.org/gnu/libmicrohttpd/
