--- a/python/py-skyfield/Portfile
+++ b/python/py-skyfield/Portfile
@@ -21,7 +21,7 @@ checksums           rmd160  97006fc3d9ae95c8fa5b5dd087f3eca9ff7a4641 \
                     sha256  8b81f15b65e0b826341b17bf9e1446a0af94e49ed5983c04f123da49c1045fe1 \
                     size    405437
 
-python.versions     38 39 310 311
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
     depends_build-append \
